# Vic3MapUtils

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format-check.yml
README/example_networks/: edit_1.splnet  edit_2.splnet  edit_base.splnet  edit_merged.splnet  standalone_1.splnet  standalone_2.splnet  standalone_merged.splnet
cmake/: CMakeLists.txt  version.cmake  version.hpp.in  windows.cmake
src/: main.cpp  util.cpp  util.hpp
src/SplineNetwork/: Anchor.cpp  Anchor.hpp  Diff.cpp  Diff.hpp  NetworkItemChanges.cpp  NetworkItemChanges.hpp  Route.cpp  Route.hpp  SplineNetwork.cpp  SplineNetwork.hpp  Strip.cpp  Strip.hpp
src/SplineNetwork/FileHandler/: SplnetFileReader.cpp  SplnetFileReader.hpp  SplnetFileWriter.cpp  SplnetFileWriter.hpp
